test/trivial/bradc/defaultinit1a.good
Error: Variable 'a' used before defined (defaultinit1a.chpl:3)
